# birdbrain

./: .gitignore  Makefile  README.md  birdbrain.db  main.py  pyproject.toml
chrome_extension/: background.js  content.js  hook.js  manifest.json  popup.html  popup.js
firefox_extension/: content.js  hook.js  manifest.json  popup.js
frontend/: package-lock.json
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: BookmarkCard.svelte  StatsBar.svelte  TopicFilter.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/topics/: +page.svelte
src/adapters/ai/: groq_classifier.py
src/adapters/db/: models.py  repository.py
src/adapters/twitter/: parser.py
src/core/: entities.py  interfaces.py  value_objects.py
src/infrastructure/: celery_app.py  config.py  database.py  tasks.py
src/infrastructure/ai/: groq_client.py
src/infrastructure/api/: server.py
src/infrastructure/cli/: app.py
src/use_cases/: classify_tweets.py  sync_bookmarks.py
