[project]
name = "birdbrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camoufox[geoip]>=0.4.11",
    "fastapi>=0.128.0",
    "pillow>=12.1.0",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
]
