[project]
name = "birdbrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic-settings>=2.0.0",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
]
